syntax = "proto3";
package test;

service TestService{
	rpc Calculate(Request) returns (Reply){}
	rpc CalculateHuge(HugeRequest) returns(stream Reply){}

	rpc CalculateApi(Request) returns (Reply){}
	}

message Request {
	int64 message = 1;
}

message Reply {
	int64 message = 1;
}

message HugeRequest{
	repeated int64 message = 1;
}